--- a/index.html
+++ b/index.html
@@ -36,15 +36,15 @@
           <button class="profile__add-button"></button>
         </section>
         <section class="cards page__section">
-          <ul class="card__list">
+          <ul class="cards__list">
             <li class="card">
               <img
                 src="./images/yosemite-valley.jpg"
                 alt="Picture of Yosemite Valley"
                 class="card__image"
               />
-              <div class="card__decription">
-                <h2>Yosemite Valley</h2>
+              <div class="card__description">
+                <h2 class="card__title">Yosemite Valley</h2>
                 <button class="card__like-button"></button>
               </div>
             </li>
@@ -54,8 +54,8 @@
                 alt="Picture of Lake Louise"
                 class="card__image"
               />
-              <div class="card__decription">
-                <h2>Lake Louise</h2>
+              <div class="card__description">
+                <h2 class="card__title">Lake Louise</h2>
                 <button class="card__like-button"></button>
               </div>
             </li>
@@ -65,8 +65,8 @@
                 alt="Picture of Bald Mountains"
                 class="card__image"
               />
-              <div class="card__decription">
-                <h2>Bald Mountains</h2>
+              <div class="card__description">
+                <h2 class="card__title">Bald Mountains</h2>
                 <button class="card__like-button"></button>
               </div>
             </li>
@@ -76,8 +76,8 @@
                 alt="Picture of Latemar"
                 class="card__image"
               />
-              <div class="card__decription">
-                <h2>Latemar</h2>
+              <div class="card__description">
+                <h2 class="card__title">Latemar</h2>
                 <button class="card__like-button"></button>
               </div>
             </li>
@@ -87,8 +87,8 @@
                 alt="Picture of Vanoise National Park"
                 class="card__image"
               />
-              <div class="card__decription">
-                <h2>Vanoise National Park</h2>
+              <div class="card__description">
+                <h2 class="card__title">Vanoise National Park</h2>
                 <button class="card__like-button"></button>
               </div>
             </li>
@@ -98,15 +98,17 @@
                 alt="Picture of Lago di Braies"
                 class="card__image"
               />
-              <div class="card__decription">
-                <h2>Lago di Braies</h2>
+              <div class="card__description">
+                <h2 class="card__title">Lago di Braies</h2>
                 <button class="card__like-button"></button>
               </div>
             </li>
           </ul>
-          <h3 class="card__footer-text">&#169 2024 Around The U.S.</h3>
         </section>
       </main>
+      <footer class="footer">
+        <p class="footer__text">&#169 2024 Around The U.S.</p>
+      </footer>
     </div>
   </body>
 </html>
