--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
               />
               <div class="card__description">
                 <h2 class="card__title">Yosemite Valley</h2>
-                <button class="card__like-button"></button>
+                <button type="button" class="card__like-button"></button>
               </div>
             </li>
             <li class="card">
@@ -56,7 +56,7 @@
               />
               <div class="card__description">
                 <h2 class="card__title">Lake Louise</h2>
-                <button class="card__like-button"></button>
+                <button type="button" class="card__like-button"></button>
               </div>
             </li>
             <li class="card">
@@ -67,7 +67,7 @@
               />
               <div class="card__description">
                 <h2 class="card__title">Bald Mountains</h2>
-                <button class="card__like-button"></button>
+                <button type="button" class="card__like-button"></button>
               </div>
             </li>
             <li class="card">
@@ -78,7 +78,7 @@
               />
               <div class="card__description">
                 <h2 class="card__title">Latemar</h2>
-                <button class="card__like-button"></button>
+                <button type="button" class="card__like-button"></button>
               </div>
             </li>
             <li class="card">
@@ -89,7 +89,7 @@
               />
               <div class="card__description">
                 <h2 class="card__title">Vanoise National Park</h2>
-                <button class="card__like-button"></button>
+                <button type="button" class="card__like-button"></button>
               </div>
             </li>
             <li class="card">
