--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         </section>
       </main>
       <footer class="footer page__section">
-        <p class="footer__text">&#169 2024 Around The U.S.</p>
+        <p class="footer__text">&copy; 2024 Around The U.S.</p>
       </footer>
     </div>
     <script src="./scripts/index.js"></script>
