--- a/index.html
+++ b/index.html
@@ -110,6 +110,27 @@
         <p class="footer__text">&copy; 2024 Around The U.S.</p>
       </footer>
     </div>
+    <div class="modal modal__opened">
+      <div class="modal__container">
+        <button class="modal__close"></button>
+        <p class="modal__heading">Edit profile</p>
+        <form class="modal__form">
+          <input
+            placeholder="Name"
+            class="modal__input"
+            type="text"
+            name="title"
+          />
+          <input
+            placeholder="Description"
+            class="modal__input"
+            type="text"
+            name="subtitle"
+          />
+          <button class="modal__button">Save</button>
+        </form>
+      </div>
+    </div>
     <script src="./scripts/index.js"></script>
   </body>
 </html>
