--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <p class="footer__text">&copy; 2024 Around The U.S.</p>
       </footer>
     </div>
-    <div class="modal modal__opened">
+    <div class="modal">
       <div class="modal__container">
         <button class="modal__close"></button>
         <p class="modal__heading">Edit profile</p>
