Add JavaScript to cards and edit button

--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
               class="profile__edit-button"
               id="profile-edit-button"
             ></button>
-            <p class="profile__subtitle">Explorer</p>
+            <p class="profile__description">Explorer</p>
           </div>
           <button type="button" class="profile__add-button"></button>
         </section>
         <section class="cards page__section">
           <ul class="cards__list">
-            <li class="card">
+            <!-- <li class="card">
               <img
                 src="./images/yosemite-valley.jpg"
                 alt="Picture of Yosemite Valley"
@@ -106,7 +106,7 @@
                 <h2 class="card__title">Lago di Braies</h2>
                 <button type="button" class="card__like-button"></button>
               </div>
-            </li>
+            </li>-->
           </ul>
         </section>
       </main>
@@ -124,17 +124,29 @@
             class="modal__input"
             type="text"
             name="title"
+            id="profile-title-input"
           />
           <input
             placeholder="Description"
             class="modal__input"
             type="text"
-            name="subtitle"
+            name="description"
+            id="profile-description-input"
           />
           <button class="modal__button">Save</button>
         </form>
       </div>
     </div>
+
+    <template id="card-template">
+      <li class="card">
+        <img src="" alt="" class="card__image" />
+        <div class="card__description">
+          <h2 class="card__title"></h2>
+          <button type="button" class="card__like-button"></button>
+        </div></li
+    ></template>
+
     <script src="./scripts/index.js"></script>
   </body>
 </html>
