feat/ add preview image modal and transitions for modals

--- a/index.html
+++ b/index.html
@@ -102,9 +102,12 @@
     <!-- ----------------------------------------------------------------------- -->
     <!--                           Preview Image Modal                           -->
     <!-- ----------------------------------------------------------------------- -->
-    <div class="modal modal_opened" id="card-add-modal">
-      <button class="modal__close" id="card-close-button"></button>
-      <p class="modal__heading"></p>
+    <div class="modal" id="preview-image-modal">
+      <div class="modal__container modal__image-container">
+        <img src="" alt="" class="modal__preview-image" />
+        <h2 class="modal__preview-title"></h2>
+        <button class="modal__close"></button>
+      </div>
     </div>
     <!-- ----------------------------------------------------------------------- -->
     <!--                              Card Template                              -->
