--- a/index.html
+++ b/index.html
@@ -55,21 +55,36 @@
         <button class="modal__close" id="profile-close-button"></button>
         <p class="modal__heading">Edit profile</p>
         <form class="modal__form">
-          <input
-            placeholder="Name"
-            class="modal__input"
-            type="text"
-            name="title"
-            id="profile-title-input"
-          />
-          <input
-            placeholder="Description"
-            class="modal__input"
-            type="text"
-            name="description"
-            id="profile-description-input"
-          />
-          <button class="modal__button">Save</button>
+          <label class="modal__label">
+            <input
+              placeholder="Name"
+              class="modal__input"
+              type="text"
+              name="title"
+              id="profile-title-input"
+              required
+              minlength="2"
+              maxlength="40" />
+            <span class="modal__error" id="profile-title-input-error"></span
+          ></label>
+          <label class="modal__label">
+            <input
+              placeholder="Description"
+              class="modal__input"
+              type="text"
+              name="description"
+              id="profile-description-input"
+              required
+              minlength="2"
+              maxlength="200" />
+            <span
+              class="modal__error"
+              id="profile-description-input-error"
+            ></span
+          ></label>
+          <button class="modal__button modal__button_disabled" disabled>
+            Save
+          </button>
         </form>
       </div>
     </div>
@@ -81,21 +96,32 @@
         <button class="modal__close" id="card-close-button"></button>
         <p class="modal__heading">New Place</p>
         <form class="modal__form">
-          <input
-            placeholder="Title"
-            class="modal__input modal__input_type_title"
-            type="text"
-            name="title"
-            id="add-card-form"
-          />
-          <input
-            placeholder="Image link"
-            class="modal__input modal__input_type_url"
-            type="text"
-            name="link"
-            id="profile-description-input"
-          />
-          <button class="modal__button">Create</button>
+          <label class="modal__label">
+            <input
+              placeholder="Title"
+              class="modal__input modal__input_type_title"
+              type="text"
+              name="title"
+              id="add-card-title"
+              required
+              minlength="1"
+              maxlength="30"
+            />
+            <span class="modal__error" id="add-card-title-error"></span>
+          </label>
+          <label class="modal__label">
+            <input
+              placeholder="Image link"
+              class="modal__input modal__input_type_url"
+              type="url"
+              name="link"
+              id="add-card-url"
+              required />
+            <span class="modal__error" id="add-card-url-error"></span
+          ></label>
+          <button class="modal__button modal__button_disabled" disabled>
+            Create
+          </button>
         </form>
       </div>
     </div>
@@ -123,5 +149,6 @@
     ></template>
 
     <script src="./scripts/index.js"></script>
+    <script src="./scripts/validation.js"></script>
   </body>
 </html>
