--- a/src/index.html
+++ b/src/index.html
@@ -28,13 +28,13 @@
             class="profile__image"
           />
           <div class="profile__info">
-            <h1 class="profile__title">Jacques Cousteau</h1>
+            <h1 class="profile__title">Samuel Belmonte</h1>
             <button
               type="button"
               class="profile__edit-button"
               id="profile-edit-button"
             ></button>
-            <p class="profile__description">Explorer</p>
+            <p class="profile__description">Junior Estimator</p>
           </div>
           <button type="button" class="profile__add-button"></button>
         </section>
