Add uploads for initial cards and user information to the DOM

--- a/src/index.html
+++ b/src/index.html
@@ -28,13 +28,13 @@
             class="profile__image"
           />
           <div class="profile__info">
-            <h1 class="profile__title">Samuel Belmonte</h1>
+            <h1 class="profile__title"></h1>
             <button
               type="button"
               class="profile__edit-button"
               id="profile-edit-button"
             ></button>
-            <p class="profile__description">Junior Estimator</p>
+            <p class="profile__description"></p>
           </div>
           <button type="button" class="profile__add-button"></button>
         </section>
@@ -59,7 +59,7 @@
               placeholder="Name"
               class="modal__input"
               type="text"
-              name="title"
+              name="name"
               id="profile-title-input"
               required
               minlength="2"
@@ -71,7 +71,7 @@
               placeholder="Description"
               class="modal__input"
               type="text"
-              name="description"
+              name="about"
               id="profile-description-input"
               required
               minlength="2"
