Push for updated code

--- a/src/index.html
+++ b/src/index.html
@@ -148,7 +148,7 @@
       <div class="modal__container">
         <button class="modal__close" id="card-close-button"></button>
         <p class="modal__heading">Change profile picture</p>
-        <form class="modal__form">
+        <form class="modal__form" id="edit-avatar-form">
           <label class="modal__label">
             <input
               placeholder="Image link"
@@ -157,7 +157,7 @@
               name="link"
               id="edit-avatar-url"
               required />
-            <span class="modal__error" id="add-card-url-error"></span
+            <span class="modal__error" id="edit-avatar-url-error"></span
           ></label>
           <button class="modal__button modal__button_disabled" disabled>
             Save
